Adding reactify and es6 transformations for browserify

--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   ],
   "browserify-shim": {
     "react": "global:React"
-  }
+  },
+  "browserify": {"transform": [["reactify", {"es6": true}]]}
 }
